[package]
name = "drone-network"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
crossbeam-channel = "0.5.14"
dn_internal = { path = "crates/dn_internal" }

[dev-dependencies]
toml = "0.8.19"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
] }

[[example]]
name = "network-init"
path = "examples/network/network-init.rs"
