[package]
name = "dn_internal"
version = "0.1.0"
edition = "2021"

[dependencies]
dn_client = { path = "../dn_client" }
dn_controller = { path = "../dn_controller" }
dn_message = { path = "../dn_message" }
dn_network = { path = "../dn_network" }
dn_server = { path = "../dn_server" }
dn_topology = { path = "../dn_topology" }
