[package]
name = "dn_network"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }
dn_controller = { path = "../dn_controller" }
dn_client = { path = "../dn_client" }
dn_server = { path = "../dn_server" }
petgraph = "0.6.5"
rayon = "1.10.0"
