[package]
name = "dn_network"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }

ledron_james = { git = "https://github.com/anass03/LeDron_James.git", package = "LeDron_James", default-features = false, features = []}
rustastic-drone = { git = "https://github.com/Rustastic/RustasticDrone.git" }
bagel_bomber = { git = "https://github.com/daw-dev/bagel-bomber.git", default-features = false }
rusty_drones = { git = "https://github.com/rusty-drone-2024/rusty-drone.git" }
rust-roveri = { git = "https://github.com/RustRoveri/rust-roveri.git" }
skylink = { git = "https://github.com/Suge42/Skylink_drone.git" }
rustbusters-drone = { git = "https://github.com/Rustbusters/drone.git" }
fungi_drone = { git = "https://github.com/Fungi-B-D/Fungi-Drone.git" }
rust_do_it = { git = "https://github.com/RustDoIt/Drone.git" }
flypath = { git = "https://github.com/panigiove/FlyPath.git", package = "flyPath" }


dn_controller = { path = "../dn_controller" }
dn_client = { path = "../dn_client" }
dn_server = { path = "../dn_server" }
petgraph = "0.6.5"
rayon = "1.10.0"
