[package]
name = "dn_server"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" }
dn_controller = { path = "../dn_controller" }
dn_message = { path = "../dn_message" }
dn_router = { path = "../dn_router/" }
rayon = "1.10.0"
petgraph = "0.6.5"
rand = "0.9.0"
walkdir = "2.5.0"
